# sovran-mcp

./: .gitignore  Cargo.toml  LICENSE  README.md  release.sh
examples/macho-mcp/: Cargo.toml
examples/macho-mcp/src/: basic_tool.rs  longrunning_tool.rs  main.rs  resource_tool.rs
src/: client.rs  commands.rs  errors.rs  lib.rs  messaging.rs  types.rs
src/client/: client.rs  mod.rs
src/client/transport/: mod.rs  stdio.rs
src/server/: handlers.rs  mod.rs  server.rs
src/server/transport/: mod.rs  stdio.rs
src/tests/: client_tests.rs  mod.rs
src/transport/: mod.rs  stdio.rs
src/types/: commands.rs  errors.rs  messaging.rs  mod.rs  protocol.rs
tests/: client_tests.rs  integration_test.rs
tools/: release.rs
