[package]
name = "sovran-mcp"
version = "0.3.1"
edition = "2021"
authors = ["Sovran.la <support@sovran.la>"]
description = "Memory management swift-isms brought to Rust"
repository = "https://github.com/sovran-rs/sovran-arc"
license = "MIT"
readme = "README.md"
keywords = ["mcp", "ai", "anthropic", "claude", "llm"]
categories = ["api-bindings"]

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
url = { version = "2.5", features = ["serde"] }
serde_json = "1.0.137"
base64 = "0.22"
thiserror = "2.0.11"
tracing = "0.1"
tracing-subscriber = "0.3"