[package]
name = "sovran-mcp"
version = "0.3.5"
edition = "2021"
authors = ["Sovran.la <support@sovran.la>"]
description = "A synchronous Rust client for the Model Context Protocol (MCP)"
repository = "https://github.com/sovran-la/sovran-arc"
license = "MIT"
readme = "README.md"
keywords = ["mcp", "ai", "anthropic", "claude", "llm"]
categories = ["api-bindings"]

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
url = { version = "2.5", features = ["serde"] }
serde_json = "1.0.137"
base64 = "0.22"
thiserror = "2.0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml_edit = "0.22"

[[bin]]
name = "release"
path = "tools/release.rs"
