[package]
name = "sovran-mcp"
version = "0.3.6"
edition = "2021"
authors = ["Sovran.la <support@sovran.la>"]
description = "A synchronous Rust client for the Model Context Protocol (MCP)"
repository = "https://github.com/sovran-la/sovran-mcp"
license = "MIT"
readme = "README.md"
keywords = ["mcp", "ai", "anthropic", "claude", "llm"]
categories = ["api-bindings"]

[lib]
name = "sovran_mcp"
path = "src/lib.rs"

[features]
client = []
server = []
default = []
test-all = ["server", "client"]

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
url = { version = "2.5", features = ["serde"] }
serde_json = "1.0.137"
base64 = "0.22"
thiserror = "2.0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml_edit = "0.22"
sovran-typemap = { path = "../sovran-typemap" }

[[bin]]
name = "release"
path = "tools/release.rs"

[[example]]
name = "macho-mcp"
path = "examples/macho-mcp/src/main.rs"
required-features = ["server"]

[[test]]
name = "integration_test"
required-features = ["client"]